tests/paczka1/small_fuzzy/62128027.err
Error in line 5: XWW4pcWm A207 10,0
Error in line 11: XWW4pcWm S758 48,7
